remove cookie-parser and cookie session, updated user maintenance and bdm forms

--- a/templates/views/bdm_lead.html
+++ b/templates/views/bdm_lead.html
@@ -41,7 +41,7 @@
               data-ot-hide-delay="0"
               data-ot-target="#tabSettings{{$index}}"
               data-ot-fixed="true"
-              >{{$value.name | strLimitNav}}</a
+              >{{$value.name | strLimit}}</a
             >
           </li>
           {{/each}}
