--- a/templates/views/bdm_settings.html
+++ b/templates/views/bdm_settings.html
@@ -143,7 +143,9 @@
     </div>
   </div>
 </div>
-{{/block}} {{block 'javascript'}}
+{{/block}}
+<!-- javascript -->
+{{block 'javascript'}}
 <script src="/app/global.js"></script>
 <script>
   const page = parseInt('{{settings.page}}');
