--- a/templates/views/partials/head.html
+++ b/templates/views/partials/head.html
@@ -52,4 +52,7 @@
     font-size: 0.715rem !important;
     font-weight: bold;
   }
+  .input-group-append > span.text-sm {
+    width: 120px;
+  }
 </style>
