--- a/templates/views/lead_management_edit.html
+++ b/templates/views/lead_management_edit.html
@@ -4,172 +4,24 @@
     <div class="card ">
       <form action="/lead-management/update" method="post">
         <div class="card-body">
-          <div class="form-group">
-            <input 
-              type="hidden" 
-              class="form-control" 
-              name="_id" 
-              value="{{if lead}}{{lead._id.toString()}}{{/if}}" 
-            />
-          </div>
-          <div class="form-group">
-            <label>First Name</label>
-            <input 
-              type="text" 
-              class="form-control" 
-              id="first_name" 
-              name="first_name" 
-              value="{{if lead}}{{lead.first_name}}{{/if}}" 
-            />
-            <small id="first_name_error" class="form-text text-danger"></small>
-          </div>
-          <div class="form-group">
-            <label>Last Name</label>
-            <input 
-              type="text" 
-              class="form-control" 
-              id="last_name" 
-              name="last_name" 
-              value="{{if lead}}{{lead.last_name}}{{/if}}" 
-            />
-            <small id="last_name_error" class="form-text text-danger"></small>
-          </div>
-          <div class="form-group">
-            <label>Job Title</label>
-            <input 
-              type="text" 
-              class="form-control" 
-              id="job_title" 
-              name="job_title" 
-              value="{{if lead}}{{lead.job_title}}{{/if}}" 
-            />
-            <small id="job_title_error" class="form-text text-danger"></small>
-          </div>
-          <div class="form-group">
-            <label>Company</label>
-            <input 
-              type="text" 
-              class="form-control" 
-              id="company" 
-              name="company" 
-              value="{{if lead}}{{lead.company}}{{/if}}" 
-            />
-            <small id="company_error" class="form-text text-danger"></small>
-          </div>
-          <div class="form-group">
-            <label>Profile Link</label>
-            <input 
-              type="text" 
-              class="form-control" 
-              id="profile_link" 
-              name="profile_link" 
-              value="{{if lead}}{{lead.profile_link}}{{/if}}" 
-            />
-            <small id="profile_link_error" class="form-text text-danger"></small>
-          </div>
-          <div class="form-group">
-            <label>Gender</label>
-            <input 
-              type="text" 
-              class="form-control" 
-              id="gender" 
-              name="gender" 
-              value="{{if lead}}{{lead.gender}}{{/if}}" 
-            />
-            <small id="gender_error" class="form-text text-danger"></small>
-          </div>
-          <div class="form-group">
-            <label>Business Number</label>
-            <input 
-              type="text" 
-              class="form-control" 
-              id="business_no" 
-              name="business_no" 
-              value="{{if lead}}{{lead.business_no}}{{/if}}" 
-            />
-            <small id="business_no_error" class="form-text text-danger"></small>
-          </div>
-          <div class="form-group">
-            <label>Mobile</label>
-            <input 
-              type="text" 
-              class="form-control" 
-              id="mobile" 
-              name="mobile" 
-              value="{{if lead}}{{lead.mobile}}{{/if}}" 
-            />
-            <small id="mobile_error" class="form-text text-danger"></small>
-          </div>
-          <div class="form-group">
-            <label>Second Mobile</label>
-            <input 
-              type="text" 
-              class="form-control" 
-              id="second_mobile" 
-              name="second_mobile" 
-              value="{{if lead}}{{lead.second_mobile}}{{/if}}" 
-            />
-            <small id="second_mobile_error" class="form-text text-danger"></small>
-          </div>
-          <div class="form-group">
-            <label>Email</label>
-            <input 
-              type="text" 
-              class="form-control" 
-              id="email" 
-              name="email" 
-              value="{{if lead}}{{lead.email}}{{/if}}" 
-            />
-            <small id="email_error" class="form-text text-danger"></small>
-          </div>
-          <div class="form-group">
-            <label>Second Email</label>
-            <input 
-              type="text" 
-              class="form-control" 
-              id="second_email" 
-              name="second_email" 
-              value="{{if lead}}{{lead.second_email}}{{/if}}" 
-            />
-            <small id="second_email_error" class="form-text text-danger"></small>
-          </div>
-          <div class="form-group">
-            <label>Nationality</label>
-            <input 
-              type="text" 
-              class="form-control" 
-              id="nationality" 
-              name="nationality" 
-              value="{{if lead}}{{lead.nationality}}{{/if}}" 
-            />
-            <small id="nationality_error" class="form-text text-danger"></small>
-          </div>
-          <div class="form-group">
-            <label>Description</label>
-            <textarea class="form-control" 
-              rows="3" 
-              placeholder="Enter ..." 
-              style="min-height: 81px;"
-              id="description" 
-              name="description" 
-            >{{if lead}}{{lead.description}}{{/if}}</textarea>
-            <small id="description_error" class="form-text text-danger"></small>
-          </div>
-
-
-          <div class="form-group">
-            <label>Lead Status</label>
-            <select class="form-control" name="status">
-              {{each LEAD_STATUS}}
-              <option 
-                value="{{$value}}"
-                {{if lead}}{{if lead.status == $value}}selected{{/if}}{{/if}}
-              >{{$value}}</option>
-              {{/each}}
-            </select>
-            <small id="status_error" class="form-text text-danger"></small>
-          </div>
+          
+          {{include './components/hidden_id.html', { value: lead} }}
+          {{include './components/input_text.html', {type: 'text', name: 'first_name', value: lead} }}
+          {{include './components/input_text.html', {type: 'text', name: 'last_name', value: lead} }}
+          {{include './components/input_text.html', {type: 'text', name: 'job_title', value: lead} }}
+          {{include './components/input_text.html', {type: 'text', name: 'company', value: lead} }}
+          {{include './components/input_text.html', {type: 'text', name: 'profile_link', value: lead} }}
+          {{include './components/input_text.html', {type: 'text', name: 'gender', value: lead} }}
+          {{include './components/input_text.html', {type: 'text', name: 'business_no', value: lead} }}
+          {{include './components/input_text.html', {type: 'text', name: 'mobile', value: lead} }}
+          {{include './components/input_text.html', {type: 'text', name: 'second_mobile', value: lead} }}
+          {{include './components/input_text.html', {type: 'text', name: 'email', value: lead} }}
+          {{include './components/input_text.html', {type: 'text', name: 'second_email', value: lead} }}
+          {{include './components/input_text.html', {type: 'text', name: 'nationality', value: lead} }}
+          {{include './components/textarea.html', { name: 'description', value: lead} }}
+          {{include './components/select.html', { name: 'status', value: lead, options: LEAD_STATUS} }}
         </div>
+
         <div class="card-footer">
           <div class="form-group">
             <button 
@@ -193,8 +45,8 @@
 {{/block}}{{block 'javascript'}}
 <script>
   function handleError(key, value) {
-    $(`#${key}`).addClass('is-invalid')
-    $(`#${key}_error`).html(value)
+    $(`[name="${key}"]`).addClass('is-invalid');
+    $(`#${key}_error`).html(value);
   }
   {{each errors}}
     handleError(`{{$index}}`,`{{$value}}`)
