--- a/templates/views/partials/footer.html
+++ b/templates/views/partials/footer.html
@@ -1,8 +1,9 @@
 <footer class="main-footer">
-  <strong
-    >Copyright &copy; {{CURRENT_DATE | formatDate 'YYYY'}}
-    <a href="/">CBI App</a>.</strong
-  >
-  All rights reserved.
-  <div class="float-right d-none d-sm-inline-block"><b>Version</b> 1.0.0</div>
+  <strong>
+    <a href="/" class="text-info">CBI App</a> &copy; {{@CURRENT_DATE |formatDate
+    'YYYY'}}
+  </strong>
+  <div class="float-right d-none d-sm-inline-block text-info">
+    <b class="text-gray">Version</b> 1.0.0
+  </div>
 </footer>
