--- a/templates/views/partials/sidebar.html
+++ b/templates/views/partials/sidebar.html
@@ -30,49 +30,61 @@
       >
         <li class="nav-item">
           <a href="/lead" class="nav-link">
-            <i class="nav-icon far fa-id-card text-success"></i>
+            <i class="nav-icon fas fa-id-card text-success"></i>
             <p>Lead</p>
           </a>
         </li>
         <li class="nav-item">
           <a href="/calendar" class="nav-link">
-            <i class="nav-icon far fa-calendar text-success"></i>
+            <i class="nav-icon fas fa-calendar text-success"></i>
             <p>Calendar</p>
           </a>
         </li>
         <li class="nav-item">
           <a href="/bdm-lead" class="nav-link">
-            <i class="nav-icon far fa-user-circle text-info"></i>
+            <i class="nav-icon fas fa-user-circle text-info"></i>
             <p>BDM Lead</p>
           </a>
         </li>
         <li class="nav-item">
           <a href="/bdm-settings" class="nav-link">
-            <i class="nav-icon far fa-sun text-info"></i>
+            <i class="nav-icon fas fa-cog text-info"></i>
             <p>BDM Settings</p>
           </a>
         </li>
         <li class="nav-item">
           <a href="/lead-management" class="nav-link">
-            <i class="nav-icon far fa-folder-open text-indigo"></i>
+            <i class="nav-icon fas fa-folder-open text-purple"></i>
             <p>Lead Management</p>
           </a>
         </li>
         <li class="nav-item">
+          <a href="/reports" class="nav-link">
+            <i class="nav-icon fas fa-chart-bar text-purple"></i>
+            <p>Reports</p>
+          </a>
+        </li>
+        <li class="nav-item">
           <a href="/user-maintenance" class="nav-link">
-            <i class="nav-icon far fa-user text-indigo"></i>
+            <i class="nav-icon fas fa-user-cog text-purple"></i>
             <p>User Maintenance</p>
           </a>
         </li>
         <li class="nav-item">
+          <a href="/user-login" class="nav-link">
+            <i class="nav-icon fas fa-user-lock text-purple"></i>
+            <p>User Login</p>
+          </a>
+        </li>
+        <li class="nav-item">
           <a href="/user-online" class="nav-link">
-            <i class="nav-icon far fa-circle text-indigo"></i>
+            <i class="nav-icon fas fa-user-clock text-purple"></i>
             <p>User Online</p>
           </a>
         </li>
         <li class="nav-item">
           <a href="/logout" class="nav-link">
-            <i class="nav-icon far fa-window-close text-pink"></i>
+            <i class="nav-icon fas fa-times-circle text-pink"></i>
             <p>Log Out</p>
           </a>
         </li>
