--- a/templates/views/login.html
+++ b/templates/views/login.html
@@ -33,6 +33,7 @@
                 class="form-control"
                 name="email"
                 placeholder="Email"
+                value="{{if DEFAULT_EMAIL}}{{DEFAULT_EMAIL}}{{/if}}"
               />
               <div class="input-group-append">
                 <div class="input-group-text">
@@ -46,6 +47,7 @@
                 class="form-control"
                 name="password"
                 placeholder="Password"
+                value="{{if DEFAULT_PASSWORD}}{{DEFAULT_PASSWORD}}{{/if}}"
               />
               <div class="input-group-append">
                 <div class="input-group-text">
