--- a/templates/views/components/select_id.html
+++ b/templates/views/components/select_id.html
@@ -9,9 +9,9 @@
       <option value="">Select {{name}}</option>
       {{each options}}
       <option 
-        value="{{$value}}"
-        {{if value}}{{if value[name] == $value}}selected{{/if}}{{/if}}
-      >{{$value}}</option>
+        value="{{$value._id.toString()}}"
+        {{if value}}{{if value[name] == $value._id.toString()}}selected{{/if}}{{/if}}
+      >{{$value.first_name}} {{$value.last_name}}</option>
       {{/each}}
     </select>
   </div>
