--- a/templates/views/user_maintenance.html
+++ b/templates/views/user_maintenance.html
@@ -11,48 +11,14 @@
         </h3>
       </div>
       <div class="card-body">
-        <div class="form-group">
-          <div class="input-group">
-            <div class="input-group-append">
-              <span class="input-group-text">
-                <i class="fas fa-search"></i>
-              </span>
-            </div>
-            <input
-              type="search"
-              class="form-control form-control-sm"
-              id="name"
-              placeholder="Name, first name, last name"
-              onsearch="search(1);"
-            />
-          </div>
-        </div>
-        <div class="form-group">
-          <select
-            class="form-control form-control-sm select2bs4"
-            id="type"
-            onchange="search(1)"
-            style="width: 100%"
-          >
-            <option value="">Select type</option>
-            {{each USER_TYPE}}
-            <option value="{{$value}}">{{$value}}</option>
-            {{/each}}
-          </select>
-        </div>
-        <div class="form-group">
-          <select
-            class="form-control form-control-sm select2bs4"
-            id="status"
-            onchange="search(1)"
-            style="width: 100%"
-          >
-            <option value="">Select status</option>
-            {{each USER_STATUS}}
-            <option value="{{$value}}">{{$value}}</option>
-            {{/each}}
-          </select>
-        </div>
+        <!-- name -->
+        {{include './components/search_box.html', { name: 'name' } }}
+        <!-- type -->
+        {{include './components/search_select.html', { name: 'type', options:
+        USER_TYPE } }}
+        <!-- status -->
+        {{include './components/search_select.html', { name: 'status', options:
+        USER_STATUS } }}
       </div>
     </div>
     <div class="card">
@@ -139,8 +105,8 @@
                     >{{$value.email}}</a
                   >
                 </td>
-                <td>{{@$value.type | userTypeBadge}}</td>
-                <td>{{@$value.status | userStatusBadge}}</td>
+                <td>{{@$value.type | userTypeBadge | strReplace}}</td>
+                <td>{{@$value.status | userStatusBadge | strReplace}}</td>
               </tr>
               {{/each}}
             </tbody>
@@ -176,8 +142,7 @@
     '{{search.status | escapeBackslash}}'
   );
 
-  function search(page) {
-    console.log(page);
+  function search(page = 1) {
     let url = window.location.href.split('?')[0];
     let name = $('#name').val();
     let type = $('#type').val();
