--- a/templates/views/user_maintenance_add.html
+++ b/templates/views/user_maintenance_add.html
@@ -1,5 +1,5 @@
 <!-- layout -->
-{{extend './layout.html'}} 
+{{extend './layout.html'}}
 <!-- content -->
 {{block 'content'}}
 <div class="card">
@@ -10,51 +10,28 @@
   </div>
   <div class="card-body">
     <form action="/user-maintenance/create" method="post" id="formUserCreate">
-      {{each user}}
-        {{if $index === 'type'}}
-          <div class="form-group">
-            <div class="input-group">
-              <div class="input-group-append">
-                <span class="input-group-text text-sm">{{$index}}</span>
-              </div>
-              <select class="form-control form-control-sm select2bs4" name="{{$index}}">
-                <option value="">Select type</option>
-                {{each USER_TYPE}}
-                  <option 
-                    value="{{$value}}"
-                    {{if user}}{{if user.type === $value}}selected{{/if}}{{/if}}
-                  >{{$value}}</option>
-                {{/each}}
-              </select>
-              <small class="form-text text-danger" id="{{$index}}_error"></small>
-            </div>
-          </div>
-        {{else if $index !== '_id'}}
-          <div class="form-group">
-            <div class="input-group">
-              <div class="input-group-append">
-                <span class="input-group-text text-sm">{{$index | strReplace | strLimit 15}}</span>
-              </div>
-              <input 
-                type="{{if $index !== 'password'}}text{{else}}password{{/if}}" 
-                class="form-control form-control-sm" 
-                name="{{$index}}" 
-                value="{{if user}}{{user[$index]}}{{/if}}" 
-              />
-              <small 
-                class="form-text text-danger"
-                id="{{$index}}_error"
-              ></small>
-            </div>
-          </div>
-        {{/if}}
-      {{/each}}
+      <!-- first name -->
+      {{include './components/input_text.html', {type: 'text', name:
+      'first_name', value: user} }}
+      <!-- last name -->
+      {{include './components/input_text.html', {type: 'text', name:
+      'last_name', value: user} }}
+      <!-- phone number -->
+      {{include './components/input_text.html', {type: 'text', name:
+      'phone_number', value: user} }}
+      <!-- email -->
+      {{include './components/input_text.html', {type: 'text', name: 'email',
+      value: user} }}
+      <!-- password -->
+      {{include './components/input_text.html', {type: 'password', name:
+      'password', value: user} }}
+      <!-- type -->
+      {{include './components/select.html', { name: 'type', value: user,
+      options: USER_TYPE} }}
       <div class="form-group">
-        <button 
-          type="button" 
-          class="btn bg-teal btn-block"
-          id="btnUserCreate"
-        ><i class="fas fa-save"></i> Create User</button>
+        <button type="button" class="btn bg-teal btn-block" id="btnUserCreate">
+          <i class="fas fa-save"></i> Create User
+        </button>
       </div>
     </form>
   </div>
