--- a/templates/views/user_online.html
+++ b/templates/views/user_online.html
@@ -25,14 +25,11 @@
           </td>
           <td>
             <i class="far fa-envelope"></i>
-            <a 
-              href="mailto:{{$value.split('|')[1]}}"
-              class="text-info"
-            >
+            <a href="mailto:{{$value.split('|')[1]}}" class="text-info">
               {{$value.split('|')[1]}}
             </a>
           </td>
-          <td>{{@$value.split('|')[2] | userTypeBadge}}</td>
+          <td>{{@$value.split('|')[2] | userTypeBadge | strReplace}}</td>
           <td>
             <i class="far fa-calendar"></i>
             {{@ LAST_ACTION[$index][0] | formatDate 'YYYY-MM-DD hh:mm:ss A'}}
